--- a/wood.html
+++ b/wood.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div id="box">
+        <!-- logo 導覽列跟 折疊按鈕 -->
+        <nav>
+            
+                <div>
+                    <a href="#" id="logo"><img src="logo.png"></a>
+                    <a href="#">關於家源</a>
+                    <a href="#">營業項目</a>
+                    <a href="#">購買須知</a>
+                    <a href="#">提供服務</a>
+                    <a href="#">聯絡我們</a>
+                </div>
+        </nav>
+        <!-- 內容區塊 按鈕 -->
+        <section>
+            <h1>Lorem ipsum dolor sit.</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, velit?</p>
+            <a href="#">前往購買</a>
+        </section>
+
+
+    </div>
     
 </body>
 </html>
