--- a/wood.html
+++ b/wood.html
@@ -10,20 +10,21 @@
     <div id="box">
         <!-- logo 導覽列跟 折疊按鈕 -->
         <nav>
-            
-                <div>
-                    <a href="#" id="logo"><img src="logo.png"></a>
-                    <a href="#">關於家源</a>
-                    <a href="#">營業項目</a>
-                    <a href="#">購買須知</a>
-                    <a href="#">提供服務</a>
-                    <a href="#">聯絡我們</a>
-                </div>
+            <ul>
+                <li><a href="#" id="logo"><img src="logo 2.png"></a><li>
+                <li><a href="#">關於家源</a></li>
+                <li><a href="#">營業項目</a></li>
+                <li><a href="#">購買須知</a></li>
+                <li><a href="#">提供服務</a></li>
+                <li><a href="#">聯絡我們</a></li>
+            </ul>
         </nav>
         <!-- 內容區塊 按鈕 -->
         <section>
-            <h1>Lorem ipsum dolor sit.</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, velit?</p>
+            <h1>您正在尋找客製化<br>且有質感的原木傢俱嗎？</h1>
+            <p>佳源提供了原木傢俱客製化的服務，只要您來電詢問，<br>我們會有專員為您服務，量身打造您需要的商品。<br>                     
+                <br>  此外，佳源也提供棧板買賣、貨運裝箱、木材批發<br>等營業項目。
+            </p>
             <a href="#">前往購買</a>
         </section>
 
