--- a/wood.html
+++ b/wood.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="box">
-        <!-- logo 導覽列跟 折疊按鈕 -->
+        <!-- logo 導覽列 -->
         <nav>
             <ul>
                 <li><a href="#" id="logo"><img src="logo 2.png"></a><li>
@@ -23,7 +23,7 @@
         <section>
             <h1>您正在尋找客製化<br>且有質感的原木傢俱嗎？</h1>
             <p>佳源提供了原木傢俱客製化的服務，只要您來電詢問，<br>我們會有專員為您服務，量身打造您需要的商品。<br>                     
-                <br>  此外，佳源也提供棧板買賣、貨運裝箱、木材批發<br>等營業項目。
+            <br>  此外，佳源也提供棧板買賣、貨運裝箱、木材批發<br>等營業項目。
             </p>
             <a href="#">前往購買</a>
         </section>
